--- a/css/styles.css
+++ b/css/styles.css
@@ -6,5 +6,10 @@ html, body{
 
 .card{
     position: relative;
-    top: -32%;
+    top: -30%;
+}
+
+ul {
+    list-style-type: none;
+    text-align: left;
 }
